--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "supabase": ">=1.8.1",
+    "tailwindcss-textshadow": "^2.1.3",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
