--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "supabase": ">=1.8.1",
+    "supabase": "^2.23.4",
     "tailwindcss-textshadow": "^2.1.3",
     "vaul": "^1.1.2"
   },
